# LearnFLow

./: .gitignore  AGENTS.md  README.md  learnflow.db  main.py  opencode.json  pyproject.toml  test.ipynb
backend/: .env.example  main.py  pyproject.toml
backend/db/: crud.py  models.py
backend/graphs/builder/: curriculum_builder.py  newsletter_builder.py
backend/graphs/curriculum/: graph.py
backend/graphs/curriculum/nodes/: generate_syllabus.py  save_to_db.py
backend/graphs/newsletter/nodes/: critic.py  finalizer.py  planner.py  research.py  summarizer.py  writer.py
backend/prompts/: prompt.py
backend/schema/: schemas.py
backend/test/: openrouter_test.py  test_email.py  test_frontend_index.html
backend/utils/: create_newsletter.py  email.py  llm.py
db/: crud.py  database.py  models.py
db/supabase_db/: test.py
frontend/: app.js  config.js  index.css  index.html
graphs/: curriculum_graph.py  newsletter_generator_graph.py
graphs/builder/: curriculum_builder.py  newsletter_builder.py
graphs/curriculum/nodes/: generate_syllabus.py  parse_input.py
graphs/newsletter/: graph.py
graphs/newsletter/nodes/: critic.py  research.py  summarizer.py  writer.py
prompts/: prompt.py
schema/: schemas.py
schemas/: all_schemas.py  schemas.py
test/: test_backend.py  test_email.py
utils/: create_newsletter.py  email.py  newsletter_markdown.py  scheduler.py
